<resources>
    <string name="app_name">Robot Controller</string>

    <string name="select_speed">Selecione a velocidade</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>

    <string name="network_configuration">Configurações de rede</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>

    <string name="ip_or_domain">IP ou Domínio</string>
    <string name="ip_domain_helper_text">Digite um IP ou Domínio válido</string>
    <string name="ip_domain_error_text">IP ou Domínio inválido</string>

    <string name="tcp_port_commands">Porta TCP para comandos</string>
    <string name="tcp_port_video">Porta TCP para vídeo</string>
    <string name="tcp_port_helper_text">Digite uma porta TCP entre 1 e 65535</string>
    <string name="tcp_port_error_text">Porta TCP inválida</string>

    <string name="network_params_error">Config rede inválida</string>
    <string name="on_send_command_error">Erro ao enviar comando</string>
    <string name="fail_to_connect_to_robot">Falha ao conectar ao robô</string>
    <string name="robot_offline_error">Robô offline</string>
    <string name="video_streaming_error">Falha ao receber stream de vídeo</string>

    <string name="stop_button">Parar</string>
    <string name="stop_all_button">Parar tudo</string>
    <string name="stop_video_button">Parar vídeo</string>
    <string name="centralize_camera_button">Centralizar</string>
    <string name="telemetry_button">Telemetria</string>
    <string name="compass_button">Bússola</string>

    <string name="map_environment">Mapear ambiente</string>
    <string name="where_am_i">Onde estou?</string>

    <string name="pan_helper_text">0 a 180 graus</string>
    <string name="tilt_helper_text">45 a 135 graus</string>
    <string name="go_to">Ir para</string>

    <string name="no_value">Sem valor, clique para atualizar</string>
    <string name="invalid_value">Valor inválido</string>

    <string name="environment_name">Nome do ambiente</string>
    <string name="environment_name_error_text">Nome inválido</string>
    <string name="environment_name_helper_text">O nome não pode ser vazio</string>

    <string name="antenna_info">Info antena</string>
    <string name="pan_value">Pan: %d</string>
    <string name="tilt_value">Tilt: %d</string>
    <string name="lqi_value">LQI: %.1f</string>

</resources>