<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomSheetDialog"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bottomSheetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/environment_name"
        android:textAlignment="center"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/environmentNameInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/environmentNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:hint="@string/environment_name"
        app:helperText="@string/environment_name_helper_text"
        app:endIconDrawable="@drawable/ic_clear_text"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetTitle"
        app:layout_constraintBottom_toTopOf="@id/cancelButton" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/environmentNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="16sp"
            android:textColor="@color/secondary_text_color"
            android:imeOptions="actionDone"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintTop_toBottomOf="@id/environmentNameInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancelButton"
        app:layout_constraintBottom_toBottomOf="@id/cancelButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>