<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stopVideoButton"
            style="@style/myMaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_video_button"
            app:icon="@drawable/ic_stop_video_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/stopAllButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stopAllButton"
            style="@style/myMaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_all_button"
            android:layout_marginTop="12dp"
            app:icon="@drawable/ic_stop_button"
            app:layout_constraintTop_toBottomOf="@id/stopVideoButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/compassButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/compassButton"
            style="@style/myMaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compass_button"
            app:icon="@drawable/ic_telemetry_button"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/stopAllButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/compassValue" />

        <TextView
            android:id="@+id/compassValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value"
            android:textSize="14dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/primary_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compassButton"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>